--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@prisma/client": "^3.15.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
-    "next": "latest",
+    "next": "^15.3.3",
     "prisma": "^3.15.2",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
